# Bayesian-Stochastic-time-series-generator

./: .gitignore  DFT.asv  Distribofvortices.m  Distribofvortices.py  Filterdesign.m  Given_dist_NLmin_NLmax_model.pth  Given_dist_NLmin_NLmax_model.py  Given_dist_NLmin_NLmax_model_short.pth  Given_max_model.pth  Given_max_model.py  Given_max_model_short.pth  Given_min_model.pth  Given_min_model.py  Given_min_model_short.pth  Lambda_ci_analysis_VorX.m  MDN.ipynb  MDN.m  MDN.py  Plot.asv  Plot_mac.asv  Plot_mac.m  README.md  Short_time_analysis.asv  Short_time_analysis.m  Short_time_fourier_analysis.m  VFfeaturedVorX(backup_i).m  VFfeaturedVorX(backup_ii).m  VFfeaturedVorX.asv  VFfeaturedVorX.m  VFfeaturedVorX_mac.m  VorXfeaturedVF.py  corrcoeff_vorx.m  data_prep.m  data_prep_mac.m  differential_analysis_long.m  differential_analysis_short.asv  differential_analysis_short.m  genGaussCop.m  lambdacivorX.asv  lambdacivorX.m  (+10 more)
Bayesian_ST/: README.md  pyproject.toml
Bayesian_ST/src/bayesian_st/: Given_dist_NLmin_NLmax_model.py  Given_max_model.py  Given_min_model.py  MDN.ipynb  Short_time_analysis.m  VFfeaturedVorX.m  differential_analysis_short.m  main.py  tempCodeRunnerFile.py
Bayesian_ST/src/bayesian_st/utils/: Given_dist_NLmin_NLmax_model.pth  Given_max_model.pth  Given_min_model.pth  MDN.ipynb  MDN.py  Short_time_analysis.m  Stochastic_generation.py  VFfeaturedVorX.m  chopped_signal_analysis.m  differential_analysis_chopped.m  std_uprime_O_u_tau_chopped.mat  std_uprime_chopped.mat  std_wprime_O_u_tau_chopped.mat  std_wprime_chopped.mat  velocity_flu_gen.py
