[project]
name = "bayesian-st"
version = "0.1.0"
description = ""
authors = [
    {name = "Roozbeh Ehsani",email = "ehsan010@umn.edu"}
]
readme = "README.md"
requires-python = "3.13.9"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "h5py (>=3.15.1,<4.0.0)",
    "torch (>=2.9.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "bayesian_st", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
